Fixed text spacing

--- a/css/style2.css
+++ b/css/style2.css
@@ -16,6 +16,7 @@ body {
     background: #fafafa;
     color: #333;
     font-family: 'libre baskerville', serif;
+    text-align: justify;
 }
 
 
